<resources>
    <string name="facebook_app_id">2746530712328919</string>
    <string name="fb_login_protocol_scheme">fb2746530712328919</string>
    <string name="bottom_navi_specialities">အမျိုးအစား</string>
    <string name="bottom_navi_consultations">ချိန်းဆိုမှုများ</string>
    <string name="bottom_navi_profile">ပရိုဖိုင် </string>
    <string name="tv_speciality">ဦးနှောက်နှင့် အာရုံကြော ဆိုင်ရာ</string>
    <string name="tv_doctor_name">ပါမောက္ခဦးအောင်ဝင်း</string>
    <string name="tv_dob">မွေးနေ့ </string>
    <string name="tv_height">အရပ် </string>
    <string name="tv_bloodtype">သွေးအုပ်စုအမျိုးအစား</string>
    <string name="tv_weight">ခန္ဓာကိုယ်အလေးချိန် </string>
    <string name="tv_blood_pressure">သွေးပေါင်ချိန်</string>
    <string name="tv_allergic_medicine">မတည့်သောဆေး</string>
    <string name="btn_yes">သေချာပါသည်</string>
    <string name="btn_no">မလုပ်တော့ပါ</string>
    <string name="lbl_patient_name">လူနာအမည် </string>
    <string name="lbl_dob">မွေးနေ့ </string>
    <string name="lbl_height">အရပ် </string>
    <string name="lbl_blood_type">သွေးအုပ်စုအမျိုးအစား </string>
    <string name="lbl_allergic_medicine">မတည့်သောဆေး</string>
    <string name="tv_height_unit">ft</string>
    <string name="tv_weight_unit">lb</string>
    <string name="tv_bloodpressure_unit">mmHg</string>
    <string name="et_hint_allergic_medicine">မတည့်သောဆေး ရှိလျှင် ရေးသားပေးပါ</string>
    <string name="lbl_full_column">:</string>
    <string name="btn_continue">ဆက်ရန်</string>
    <string name="toolbar_title_casesummary">လူနာအချက်အလက်များဖြည့်ပါ</string>
    <string name="tv_title_general_questions">အထွေထွေမေးခွန်းများ</string>
    <string name="tv_title_special_questions">ရောဂါဆိုင်ရာမေးခွန်းများ</string>
    <string name="tv_title_specialities">ရောဂါအမျိုးအစားများ</string>
    <string name="tv_title_recent_consultation">မကြာသေးခင်က ဆွေးနွေးမှုများ</string>
    <string name="tv_title_confirm_consultation">ဆွေးနွေးမှု အတည်ပြုချက်</string>
    <string name="tv_title_confirm_info">အချက်အလက်များအား အတည်ပြုပေးပါ </string>
    <string name="lbl_title_consultation">ဆွေးနွေးမှု ပြုလုပ်နိုင်ပါပြီ </string>
    <string name="tv_special_question">၁), သွားနှင့်ခံတွင်းဆိုင်ရာ ရောဂါများကို မကြာခဏ စစ်ဆေးလေ့ရှိပါသလား ?</string>
    <string name="lbl_yes">ရှိပါသည်</string>
    <string name="lbl_no">မရှိပါ </string>
    <string name="tv_confirm_consultation_message"> ဆရာ၀န်နှင့် တိုင်ပင်ဆွေးနွေးရန် Consultation Request ပြုလုပ်မှာ သေချာပါသလား ?</string>
    <string name="btn_make_consultation">ချိန်းဆိုမှု ပြုလုပ်မည်</string>
    <string name="lbl_consultation_response_description">ဆွေးနွေးမှုပြုလုပ်ရန် <b>ပါမောက္ခဦးအောင်ဝင်း</b>မှ လက်ခံထားပါသည်။ </string>
    <string name="lbl_doctor_brief">ပါမောက္ခဦးအောင်ဝင်းသည် ၂၀၀၀ပြည့်နှစ်တွင် ပါမောက္ခဘွဲ့ကို ရရှိခဲ့ပြီး လက်ရှိတွင်
        Bumrumgrad International Hospital တွင် ဦး‌နှောက်နှင့် အာရုံကြော အထူးကု တာ၀န်ထမ်းဆောင်နေပါသည်။</string>
    <string name="btn_start_consultation"><u>စတင် ဆွေးနွေးမည်</u></string>
    <string name="tv_patient_name">Aung Aung</string>
    <string name="lbl_dob_with_full_column">"မွေးနေ့ : "</string>
    <string name="lbl_title_consultation_request">ရက်ချိန်းယူခြင်းတောင်းဆိုမှု </string>
    <string name="lbl_old_patient">ဆွေးနွေးခဲ့ဖူးသောလူနာ</string>
    <string name="btn_call_later">"နောက်မှ "</string>
    <string name="btn_postpone">"အချိန်ရွေးမည်"</string>
    <string name="btn_accept">"လက်ခံမည် "</string>
    <string name="btn_send_message">စာပို့မည်</string>
    <string name="lbl_patient_info">လူနာအချက်အလက်</string>
    <string name="hint_message">ရေးသားပါ</string>
    <string name="lbl_the_caremm">The CareMM</string>
    <string name="lbl_enter_email_or_phone">Enter your Email or Phone Number</string>
    <string name="lbl_enter_phone_number">Enter Phone Number</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="btn_login"><u>Login</u></string>
    <string name="btn_forget_password">Forget Password</string>
    <string name="btn_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="lbl_enter_name">Enter your Name</string>
    <string name="lbl_enter_otp_code">Enter OTP Code</string>
    <string name="btn_get_otp">Get OTP</string>
    <string name="btn_next">Next</string>
    <string name="lbl_already_have_an_account">Already have an account?</string>
    <string name="lbl_set_password">Set Password</string>
    <string name="lbl_retype_password">Retype Password</string>
    <string name="btn_confirm">Confirm</string>
    <string name="title_filling_form">အချက်အလက်များဖြည့်ပါ</string>
    <string name="lbl_name">"အမည် "</string>
    <string name="lbl_phone">ဖုန်းနံပါတ်</string>
    <string name="lbl_gender">အမျိုးသား/အမျိုးသမီး</string>
    <string name="lbl_male">"အမျိုးသား "</string>
    <string name="lbl_female">"အမျိုးသမီး "</string>
    <string name="lbl_speciality">"အထူးကု "</string>
    <string name="lbl_experience">"လုပ်သက် "</string>
    <string name="lbl_certificates">"ရရှိထားသောဘွဲ့များ "</string>
    <string name="lbl_brief">"ကိုယ်ရေးအကျဥ်းချုပ် "</string>
    <string name="lbl_full_address">"လိပ်စာအပြည့်အစုံ "</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_see_more">ထပ်ကြည့်မည်  &gt;&gt;></string>
    <string name="lbl_questions">"မေးခွန်းများ "</string>
    <string name="btn_checkout_prescription">"ဆေးညွှန်းမှာယူမည် "</string>
    <string name="lbl_prescription">"ဆေးညွှန်း "</string>
    <string name="lbl_patient_infos">"လူနာအချက်အလက်များ "</string>
    <string name="lbl_address">"လိပ်စာ "</string>
    <string name="lbl_choose_address">"လိပ်စာရွေးချယ်ပါ "</string>
    <string name="lbl_new_address">"လိပ်စာအသစ် "</string>
    <string name="lbl_division">တိုင်း/ပြည်နယ်</string>
    <string name="lbl_township">"မြို့နယ် "</string>
    <string name="btn_checkout">"မှာယူမည် "</string>
    <string name="lbl_sub_total">Subtotal</string>
    <string name="lbl_delivery_fee">Delivery Fee</string>
    <string name="tv_address">No.(117-119),Room(4D),Golden Gate Tower, Upper Pazundaung Road, Yangon, Myanmar.</string>
    <string name="lbl_checkout_description">ငွေပေးချေမှု အတည်ပြုပြီး နောက်တစ်ရက်မှ စတင်၍ ဆေး များကို လိုက်လံပို့ဆောင်မည် ဖြစ်ပါသည် ။</string>
    <string name="btn_pay">"ငွေပေးချေမည် "</string>
    <string name="lbl_consultations_history">"ချိန်းဆိုမှုမှတ်တမ်းများ "</string>
    <string name="btn_sign_out"><u>အကောင့်မှထွက်မည်</u></string>
    <string name="btn_change_pw"><u>လျို့ဝှက်နံပါတ်ပြောင်းလဲမည်</u></string>
    <string name="title_filling_profile">ပရိုဖိုင် ဖြည့်သွင်းမည်</string>
    <string name="btn_post_image">"ပုံတင်မည် "</string>
    <string name="lbl_a">A</string>
    <string name="lbl_b">B</string>
    <string name="lbl_ab">AB</string>
    <string name="lbl_o">O</string>
    <string name="btn_save">"သိမ်းမည် "</string>
    <string name="dialog_filling_profile">သင့်ပရိုဖိုင်တွင် အချက်အလက်များ မဖြည့်သွင်းရသေးပါ</string>
    <string name="btn_fill">"ဖြည့်မည် "</string>
    <string name="btn_close">"ပိတ်မည် "</string>
    <string name="dialog_postpone">ဆွေးနွေးမည့် အချိန်ရွေးမည်</string>
    <string name="btn_choose">"ရွေးမည် "</string>
    <string name="lbl_consultaion_date">"ဆွေးနွေးခဲ့သည့်နေ့စွဲ "</string>
    <string name="btn_finish_consultation">ဆေးညွှန်းပြီးဆွေမည်းနွေးမှုကိုပြီးဆုံး</string>
    <string name="btn_find">ရှာမည်</string>
    <string name="lbl_count">အရေအတွက်</string>
    <string name="lbl_taking_days">"သောက်ရမည့်ရက် "</string>
    <string name="tv_tablets">tab</string>
    <string name="lbl_taking_times">"အကြိမ်အရေအတွက် "</string>
    <string name="lbl_morning">မနက်</string>
    <string name="lbl_lunch">နေ့ </string>
    <string name="lbl_night">ည </string>
    <string name="lbl_to_medicine">"ဆေးကို "</string>
    <string name="lbl_before">အစာမစားမှီသောက်ရန်</string>
    <string name="lbl_after">အစာစားပြီးသောက်ရန်</string>
    <string name="btn_add">"ထည့်မည် "</string>
    <string name="consultation_note">ဆေးကုသမှုမှတ်တမ်း</string>
    <string name="hint_consultation_note">"ဆေးကုသမှုမှတ်တမ်း ရေးသားရန် "</string>
    <string name="tv_brief">ပါမောက္ခဦးအောင်ဝင်းသည် 2000 ပြည့်နှစ်တွင် ပါမောက္ခဘွဲ့ကို  ရရှိခဲ့ပြီး လက်ရှိတွင်  Bumrungrad International ospital တွင်  ဦးနှောက်  နှင့် အာရုံကြောဆိုင်ရာဌာန တွင်တာဝန်ထိန်းဆောင်လျက်ရှိပါသည်။</string>
    <string name="title_edit_profile">"ပရိုဖိုင်ပြုပြင်မည် "</string>
    <string name="tv_doctor_question">သွားတိုက်တဲ့အခါ (ဒါမှမဟုတ်) ကြိုးဖြင့် သွားသန့်ရှင်း ရေးလုပ်တဲ့အခါ သွေးထွက်တာမျိုးရှိလား?</string>
    <string name="lbl_amount">"ပမာဏ "</string>
    <string name="lbl_days">"ကြာချိန် "</string>
    <string name="lbl_repeat">Repeat</string>
    <string name="lbl_note">"မှတ်ချက် "</string>
    <string-array name="speciality_list">
        <item>သွားဖက်ဆိုင်ရာ </item>
        <item>ဆီးလမ်းကြောင်းအထူးကု </item>
        <item>ဦး‌နှောက်နှင့် အာရုံကြောဆိုင်ရာ </item>
        <item>အရိုးအထူးကု </item>
        <item>နှလုံးအထူးကု </item>
        <item>အထွေထွေသမားတော်</item>
        <item>အရေပြားအထူးကု </item>
        <item>သားဖွားမီးယပ်အထူးကု </item>
    </string-array>
    <string-array name="months_list">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="days_list">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="years_list">
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
    </string-array>
    <string-array name="blood_types_list">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>
    <string-array name="division_list">
        <item>Yangon</item>
        <item>Ayeyawady</item>
        <item>Bago</item>
        <item>Sagaing</item>
        <item>Mandalay</item>
        <item>Magway</item>
        <item>Tanintharye</item>
        <item>Kachin</item>
        <item>Kayah</item>
        <item>Kayin</item>
        <item>Mon</item>
        <item>Chinn</item>
        <item>Rakhine</item>
        <item>Shann</item>
    </string-array>
</resources>