<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium_3"
    android:background="@drawable/rounded_corner_white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivConfirmDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appt_confirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_3"/>

    <org.mmtextview.components.MMTextView
        android:id="@+id/tvConfirmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_confirm_consultation"
        android:textAlignment="center"
        style="@style/text_title"
        android:layout_below="@id/ivConfirmDoctor"
        android:layout_marginTop="@dimen/margin_medium_3"/>

    <org.mmtextview.components.MMTextView
        android:id="@+id/tvConfirmMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_confirm_consultation_message"
        android:textAlignment="center"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/textColor"
        android:lineSpacingMultiplier="1.3"
        android:layout_below="@id/tvConfirmTitle"
        android:layout_marginTop="@dimen/margin_large"/>

    <org.mmtextview.components.MMTextView
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_yes"
        style="@style/text_bg.blue.button"
        android:layout_below="@id/tvConfirmMessage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_large"/>

    <org.mmtextview.components.MMTextView
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_no"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/textLightColor"
        android:textStyle="bold"
        android:layout_below="@id/tvConfirmMessage"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_small"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium_2"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:layout_toStartOf="@id/btnYes"/>


</RelativeLayout>